--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,11 @@
 #StartTwisterForm {
+    left: 50%;
+    position: absolute;
     margin: auto;
     width: 50%;
     padding: 10px;
+}
+
+.th {
+    text-align: left;
 }
