--- a/style/index.css
+++ b/style/index.css
@@ -2,10 +2,22 @@
     left: 50%;
     position: absolute;
     margin: auto;
-    width: 50%;
-    padding: 10px;
+    width: 400px;
+    margin-left: 200px;
 }
 
 .th {
     text-align: left;
+}
+
+.StartFormButton {
+    margin-right: 20px;
+    width: 100px;
+}
+
+.ButtonContainer {
+    position: absolute;
+    width: 220px;
+    margin-top: 10px;
+    left: 90px;
 }
